autocomplete_suggestions: fix z-index

--- a/app/modules/entities/scss/_autocomplete_suggestions.scss
+++ b/app/modules/entities/scss/_autocomplete_suggestions.scss
@@ -16,6 +16,8 @@
     margin-top: -1px;
     margin-bottom: 0.5em;
   }
+  // Display above things like .showAllProperties
+  z-index: 1;
   width: 100%;
   background-color: white;
   @include shy-border(0.9);
